# SkillTreeEvolver

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_en.md  README_ja.md  README_zh_TW.md  __init__.py  pyproject.toml
adapters/: __init__.py  base.py  claude.py  deepseek.py  openai.py
cli/: main.py
core/: __init__.py  default_skills.py  evaluator.py  evolve.py  skill_tree.py  tracker.py
tests/: test_skill_tree.py
