[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skilltree-evolver"
version = "1.0.0"
description = "AI Agent Skill Tree Self-Evolution Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "gitstq", email = "gitstq@users.noreply.github.com"}
]
keywords = ["ai", "agent", "skill-tree", "evolution", "llm", "claude", "openai"]
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
all = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
skilltree = "cli.main:main"

[project.urls]
Homepage = "https://github.com/gitstq/SkillTreeEvolver"
Repository = "https://github.com/gitstq/SkillTreeEvolver"

[tool.setuptools.packages.find]
include = ["core*", "adapters*", "cli*", "skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
